# adb-gui-next

./: .gitattributes  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TAURI_MIGRATION_PLAN.md  biome.jsonc  components.json  diff_stat.txt  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.agent/: gsd-file-manifest.json
.agents/workflows/: commit.md  memory-bank.md  memorybank.md
.claude/: gsd-file-manifest.json  settings.local.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.codex/: config.toml
.githooks/: pre-commit  pre-commit.cmd  pre-push  pre-push.cmd
.github/release-notes/: v0.2.0.md  v0.2.5.md
.github/workflows/: ci.yml  publish.yml
.husky/: pre-commit
docs/: MASTER-VERIFICATION-REPORT-2026-03-31.md  TAURI_PROJECT_SUMMARY.md  rust-performance-research.md  tooling.md  ultracite-standards.md
docs/adb-gui-kit/: .gitignore  go.mod  main.go
docs/dependencies/: dep.md
docs/guides/: links.md  ops-ofp-firmware-extraction.md  tooling.md
docs/plans/: 2026-04-26-emulator-root-ux-audit.md  MASTER-VERIFICATION-REPORT-2026-03-31.md  device-switcher-design.md  frontend-audit-fixes-plan.md  implementation_plan.md  ops-support-implementation-plan.md  payload_dumper_refactor.md
docs/refrences/: rhythmcache-payload-dumper-rust-8a5edab282632443.txt
docs/reports/: avd-rooting-architecture-audit.md  emulator-root-diagnostics-20260428-014552.md  emulator-root-diagnostics-20260428-014718.md  frontend-audit-report.md  frontend-audit.md  payload_dumper_audit_report.md  terminal_log_panel_analysis.md
docs/reports&audits/: color-system-audit.md  debugging-logging-report.md  file-explorer-create-and-shortcuts.md  file_explorer_multiselect_design.md  full-codebase-review-2026-04-01.md  marketplace_architecture_audit.md  ops_fix_report.md  payload-dumper-optimization-audit.md  rust-audit-report.md  sidebar_analysis_and_recommendations.md  tauri_compliance_audit.md  ui_consistency_audit.md  zip-metadata-info-panel-design.md
docs/reports-audits/: implementation_plan.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: collect-release-assets.ps1  download-darwin-tools.ps1  emulator-root-diagnostics.ps1  emulator-root-e2e.ps1  verify-release-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/benches/: copy_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_ops_xml.rs  test_ops_decrypt.rs
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: parse_header.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/: autogenerated.toml
src-tauri/resources/linux/: etc1tool  fastboot  hprof-conv  make_f2fs  make_f2fs_casefold  mke2fs  sqlite3
src-tauri/src/: app_icons.rs  helpers.rs  lib.rs  main.rs  payload.rs
src-tauri/src/commands/: adb.rs  apps.rs  debloat.rs  device.rs  emulator.rs  fastboot.rs  files.rs  marketplace.rs  mod.rs  payload.rs  system.rs
src-tauri/src/debloat/: actions.rs  backup.rs  cache.rs  lists.rs  mod.rs  sync.rs
src-tauri/src/emulator/: avd.rs  backup.rs  magisk_download.rs  magisk_package.rs  mod.rs  models.rs  root.rs  runtime.rs  sdk.rs
src-tauri/src/marketplace/: aptoide.rs  auth.rs  cache.rs  fdroid.rs  github.rs  izzy.rs  mod.rs  ranking.rs  service.rs  types.rs
src-tauri/src/payload/: cancel.rs  copy.rs  delta.rs  error.rs  extractor.rs  http.rs  http_zip.rs  mod.rs  parser.rs  remote.rs  tests.rs  transaction.rs  verify.rs  write.rs  zip.rs  zip_mmap.rs
src-tauri/src/payload/ops/: crypto.rs  detect.rs  extractor.rs  mod.rs  ofp_mtk.rs  ofp_qc.rs  ops_parser.rs  sparse.rs  test_ops_decrypt.rs
src-tauri/tests/: proptest.rs
src/app/: App.tsx
src/components/: ActionButton.tsx  AppDetailDialog.tsx  AppSidebar.tsx  BottomPanel.tsx  CheckboxItem.tsx  ConnectedDevicesCard.tsx  CopyButton.tsx  DeviceSwitcher.tsx  DirectoryTree.tsx  DropZone.tsx  EditNicknameDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  FileSelector.tsx  LoadingButton.tsx  LogsPanel.tsx  MainLayout.tsx  RemoteUrlPanel.tsx  SectionHeader.tsx  SelectionSummaryBar.tsx  ShellPanel.tsx  TerminalLogPanel.tsx  ThemeProvider.tsx  ThemeToggle.tsx  WelcomeScreen.tsx
src/desktop/: backend.ts  models.ts  runtime.ts
src/lib/: debug.ts  (+13 more)
(+539 files in other folders)
