[package]
name = "adb-gui-next"
version = "0.1.0"
description = "ADB GUI Next for Android device workflows"
authors = ["akila"]
edition = "2024"

[lib]
name = "adb_gui_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
bzip2 = "0.6"
log = "0.4"
memmap2 = "0.9"
prost = "0.14"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tempfile = "3"
url = "2"
which = "8"
xz2 = "0.1"
zstd = "0.13"
zip = "8.4.0"
tauri-plugin-clipboard-manager = "2"

# Optional: Remote URL support for payload extraction
reqwest = { version = "0.13", features = ["rustls", "stream", "http2", "blocking"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["local_zip", "remote_zip"]
local_zip = []
remote_zip = ["dep:reqwest", "dep:futures-util"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
