[package]
name = "adb-gui-next"
version = "0.1.0"
description = "ADB GUI Next for Android device workflows"
authors = ["akila"]
edition = "2024"

[lib]
name = "adb_gui_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
apk-info-axml = "1.0.11"
base64 = "0.22"
bzip2 = "0.6"
log = "0.4"
memmap2 = "0.9"
prost = "0.14"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "macros"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tempfile = "3"
url = "2"
which = "8"
xz2 = "0.1"
zstd = "0.13"
zip = "8.5.0"
tauri-plugin-clipboard-manager = "2"
urlencoding = "2"

# OPS/OFP firmware format support
aes = "0.8"
cfb-mode = "0.8"
md-5 = "0.11.0"
quick-xml = "0.39.2"

# HTTP client for marketplace + payload
reqwest = { version = "0.13", features = ["rustls", "stream", "http2", "blocking", "json"] }

# Optional: Remote URL support for payload extraction
futures-util = { version = "0.3", optional = true }
flate2 = { version = "1", optional = true }

[features]
default = ["local_zip", "remote_zip"]
local_zip = []
remote_zip = ["dep:futures-util", "dep:flate2"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
