[package]
name = "adb-gui-next"
version = "0.2.0"
description = "ADB GUI Next for Android device workflows"
authors = ["akila"]
edition = "2024"

[lib]
name = "adb_gui_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
anyhow = "1"
apk-info-axml = "1.0.11"
base64 = "0.22"
bzip2 = "0.6"
hex = "0.4"
log = "0.4"
libc = "0.2.186"
memmap2 = "0.9"
prost = "0.14"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
tauri = { version = "2.11.1", features = [] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs", "io-util", "macros"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.4"
tempfile = "3"
url = "2"
which = "8"
xz2 = "0.1"
zstd = "0.13"
zip = "8.6.0"
tauri-plugin-clipboard-manager = "2"
urlencoding = "2"

# OPS/OFP firmware format support
aes = "0.9.0"
cfb-mode = "0.9.0"
md-5 = "0.11.0"
quick-xml = "0.40.0"
brotli = { version = "8.0.2", optional = true }

# HTTP client for marketplace + payload
reqwest = { version = "0.13.3", features = ["rustls", "stream", "http2", "blocking", "json"] }

futures-util = "0.3"
flate2 = "1"

[dev-dependencies]
proptest = { version = "1", features = ["attr-macro"] }
criterion = "0.8.2"

[[bench]]
name = "copy_benchmark"
harness = false

[features]
default = ["local_zip", "remote_zip", "brotli"]
local_zip = []
remote_zip = []
brotli = ["dep:brotli"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
